# plait

./: .gitignore  .vercelignore  CMakeLists.txt  INSTALL.txt  _ISO-Drums-Plan.md  setup.sh  vercel.json
Resources/: ISODrums.entitlements  Icon.icns
api/: check.js  deactivate.js  purchase.js
api/_lib/: keys.js
scripts/: bundle_libtorch_macos.sh  package.sh  release.sh  sign_and_package.sh
src/: AudioSettingsComponent.cpp  AudioSettingsComponent.h  CustomStandaloneApp.cpp  DrumHit.h  DrumMap.h  ISODesign.cpp  ISODesign.h  LicenseDialog.cpp  LicenseDialog.h  LicenseManager.cpp  LicenseManager.h  MidiExporter.cpp  MidiExporter.h  MidiSettingsComponent.cpp  MidiSettingsComponent.h  OnsetDetector.cpp  OnsetDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SeparationEngine.cpp  SeparationEngine.h  Utils.cpp  Utils.h
web/: .env.example  index.html  package.json  vercel.json
web/api/: activate.js
web/api/_lib/: db.js  email.js
